--- a/Project development phase/Sprint 3/index.html
+++ b/Project development phase/Sprint 3/index.html
@@ -33,11 +33,9 @@
 					<!--class="my-4 text-3xl md:text-5xl text-green-800 font-bold leading-tight text-center md:text-left slide-in-bottom-h1"-->
 					DIGITAL NATURALIST</h1>
 				<p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left slide-in-bottom-subtitle">
-					An Artificial Intelligence powered tool for Bio-Diversity Researchers</p></centre>
+					An Artificial Intelligence powered tool for Bio-Diversity Researchers</p></center>
 
-				<p class="text-blue-400 font-bold pb-8 lg:pb-6 text-center md:text-left fade-in">Trouble identifing a
-					animal,plant or bird,<br>Upload the picture<br>Sit back<br>Relax<br>We will find it
-					<!DOCTYPE html>
+				<p class="text-blue-400 font-bold pb-8 lg:pb-6 text-center md:text-left fade-in">Upload a picture and Get species name!!
 				</p>
 				</center>
 				<div class="flex w-full justify-center md:justify-start pb-24 lg:pb-0 fade-in">
