--- a/Project development phase/Sprint 3/index.html
+++ b/Project development phase/Sprint 3/index.html
@@ -33,9 +33,9 @@
 					<!--class="my-4 text-3xl md:text-5xl text-green-800 font-bold leading-tight text-center md:text-left slide-in-bottom-h1"-->
 					DIGITAL NATURALIST</h1>
 				<p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left slide-in-bottom-subtitle">
-					An Artificial Intelligence powered tool for Bio-Diversity Researchers</p></center>
+					An Artificial Intelligence powered tool for Bio-Diversity Researchers</p></centre>
 
-				<p class="text-blue-400 font-bold pb-8 lg:pb-6 text-center md:text-left fade-in">Upload a picture and Get species name!!
+                    <p class="text-blue-400 font-bold pb-8 lg:pb-6 text-center md:text-left fade-in">Upload a picture and Get species name!!
 				</p>
 				</center>
 				<div class="flex w-full justify-center md:justify-start pb-24 lg:pb-0 fade-in">
@@ -50,7 +50,7 @@
 
 			<!--Right Col-->
 			<div class="w-full xl:w-3/5 py-6 overflow-y-hidden">
-				<img class="w-5/6 mx-auto lg:mr-0 slide-in-bottom" src="https://i.ibb.co/vwhxYCg/animals.png">
+				<img class="w-5/6 mx-auto lg:mr-0 slide-in-bottom" src="https://media.gettyimages.com/id/1136053333/photo/elephant-and-lion.jpg?s=612x612&w=0&k=20&c=TG2HVgk5xSqa9v-Toie5JzjMoUkHJ-6lbAdmakIo2iw=">
 			</div>
 
 
